LZW fixed, C# works on release config

--- a/LZWcompressor/LZWcompressor.csproj
+++ b/LZWcompressor/LZWcompressor.csproj
@@ -24,7 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -83,6 +83,7 @@
     <ProjectReference Include="..\Wrapper\Wrapper.vcxproj">
       <Project>{e6dc0ea1-44a1-4ca0-a9c2-e675806d4f61}</Project>
       <Name>Wrapper</Name>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
