--- a/LZWcompressor/LZWcompressor.csproj
+++ b/LZWcompressor/LZWcompressor.csproj
@@ -87,4 +87,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(ProjectDir)x64\$(ConfigurationName)\CoreASM.*" "$(TargetDir)" /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
