Fix missing Resource.h

--- a/Wrapper/Wrapper.vcxproj.filters
+++ b/Wrapper/Wrapper.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="ManagedObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Resource.h">
+      <Filter>Resource Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Wrapper.cpp">
