--- a/Wrapper/Wrapper.vcxproj
+++ b/Wrapper/Wrapper.vcxproj
@@ -122,6 +122,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ManagedObject.h" />
+    <ClInclude Include="Resource.h" />
     <ClInclude Include="Wrapper.h" />
   </ItemGroup>
   <ItemGroup>
